# bazel-multi-nixpkg-example

./: .bazelrc  .gitignore  01.multi_system_packages.patch  BUILD.bazel  README.md  WORKSPACE  flake.nix
config/: BUILD.bazel
example/: BUILD.bazel  ssl.cc
flag/: BUILD.bazel
nix/: BUILD.bazel  bazel.nix  nixpkgs.nix
nix/toolchains/: BUILD.bazel  linux_aarch64.nix
rules/: defs.bzl  nixpkgs.bzl
